<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rollofthedie</string>
    <string name="action_settings">Settings</string>
    <string name="button_d4">D4</string>
    <string name="button_d6">D6</string>
    <string name="button_d8">D8</string>
    <string name="button_d10">D10</string>
    <string name="button_d12">D12</string>
    <string name="button_d20">D20</string>
    <string name="title_activity_die_roll_fragment">DieRollFragment</string>
    <string name="title_activity_roll_list_fragment">RollListFragment</string>
    <string name="add_item">add item</string>
    <string name="addItemContentDescription">ADD</string>
    <string name="title_activity_about">About</string>
    <string name="clear">Clear</string>
    <string name="about">About</string>
    <string name="mlc">Life Counter</string>
    <string name="help">Help</string>

</resources>
